log
Thu 07 Sep 2023 07:37:21 PM UTC: 
 hashmap.c | 88 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 81 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:80:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   80 |   return NULL;
      |          ^~~~
hashmap.c:75:6: note: declared here
   75 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0d962d7
